<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="kr.ac.kaist.gan.zonedetector.ZoneDetectingActivity">

    <LinearLayout
        android:id="@+id/zone_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zone_indicating">
        </TextView>
        <TextView android:id="@+id/zone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="20dp">
        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/zone_indicator"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zone3"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center_vertical|center"
                android:background="#11AA33">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zone2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center_vertical|center"
                android:background="#AA3311">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zone4"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center_vertical|center"
                android:background="#1199AA">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zone1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center_vertical|center"
                android:background="#CC39A1">
            </TextView>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

